chore: update settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "vscode-pets.petSize": "large",
     "vscode-pets.petType": "dog",
-    "vscode-pets.position": "explorer",
-    "vscode-pets.theme": "forest"
+    "vscode-pets.position": "panel",
+    "vscode-pets.theme": "none"
 }
